[metadata]
name = arcus
author = MIT/Hans Moritz Günther
author_email = hgunther@mit.edu
license = GNU GPL v3+
license_file = licenses/LICENSE.rst
url = https://github.com/hamogu/arcus
description = Ray-tracing or reducing ARCUS data
long_description = This package contains the code for Arcus simulations. This includes both ray-trace simulations (using MARXS), but also the generation of ARF and RMFs for simpler simulations in e.g. XSPEC.
edit_on_github = False
github_project = hamogu/arcus

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy
    numpy
    marxs
    transforms3d


[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
arcus = data/*
arcus.reduction = data/*

[tool:pytest]
testpaths = "arcus" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst
